Changelog
=========

0.6.0 (unreleased)
------------------

 - Don't hard code Jinja2 dependency
 - Move entirely to Jinja2
 - Remove Cheetah
 - Remove zope.testing from test dependencies
 - Remove Standalone
 - Define a 'body' block that can be overriden
 - Tests now use difflib to give 'git diff' style output when there are problems
